# estudo-anomalias

./: .gitignore  README.md  pyproject.toml  task_1.ipynb  task_2.ipynb
