[tool.poetry]
name = "pessoal-project"
version = "0.1.0"
description = ""
authors = ["Lucas Azevedo <lucas.azevedo@cloudkitchens.com>"]
readme = "README.md"
packages = [{include = "pessoal_project"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.1"
jupyterlab = "^4.1.5"
matplotlib = "^3.8.3"
plotly = "^5.20.0"
seaborn = "^0.13.2"
xlrd = "^2.0.1"
black = "^24.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
